rezumay-frontend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name:  rezumay-frontend-pod
  labels:
    name: rezumay-frontend-pod
    app: rezumay-app

spec:
  containers:
    - image:  rezumay/frontend:latest
      name:  frontend-pod
    ports:
    - containerPort: 80
  imagePullSecrets:
    - name: rezumay-gitlab
