rezumay-external-mongodb-service.yml
kind: Service
apiVersion: v1
metadata:
 name: mongo
spec:
 type: ExternalName
 externalName: mongotoken-l7gqa.gcp.mongodb.net
