rezumay-nginx-ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    certmanager.k8s.io/issuer: "letsencrypt-staging" # certmanager
    certmanager.k8s.io/acme-challenge-type: http01 # certmanager
    #kubernetes.io/ingress.global-static-ip-name: "rezumay"

spec:
  tls: # certmanager
  - hosts:
    - rezumay.ml
    secretName: rezumay-tls
  rules:
  - host: rezumay.ml # certmanager
    http:
      paths:
      - path: /api
        backend:
          serviceName: rezumay-backend-service
          servicePort: 7070
      - path: /api/.*
        backend:
          serviceName: rezumay-backend-service
          servicePort: 7070
      - path: /.*
        backend:
          serviceName: rezumay-frontend-service
          servicePort: 8080
  # # without ssl/tls
  # rules:
  # - http:
  #     paths:
  #     - path: /api/*
  #       backend:
  #         serviceName: rezumay-backend-service
  #         servicePort: 7070
  #     - path: /*
  #       backend:
  #         serviceName: rezumay-frontend-service
  #         servicePort: 8080


#https://cloud.google.com/community/tutorials/nginx-ingress-gke
#https://docs.cert-manager.io/en/latest/tutorials/acme/quick-start/index.html
